# todolst

./: .gitignore  Cargo.toml  LICENSE  Node.toml
src/: lib.rs  main.rs  main_state.rs  main_view.rs
src/components/: group.rs  item.rs  list.rs  mod.rs  noticer.rs  todolst.rs
src/macros/: property.rs
